--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="column is-narrow has-text-centered">
           <figure class="image">  <!-- 不加 is-3by1 -->
             <img
-              src="/static/images/img.png"
+              src="static/images/img.png"
               alt="示意图"
               style="max-width:100%; display:inline-block;"
             >
@@ -208,7 +208,7 @@
         <!-- 用 inline-block+margin 保证 figure 宽度自适应，且居中 -->
         <figure class="image" style="display:inline-block; margin: 1rem 0;">
           <img
-            src="/static/images/result(1)(1).png"
+            src="static/images/result(1)(1).png"
             alt="Image 1"
             style="transform: scale(1);
                    transform-origin: center;
